# mlops-project

./: .gitignore  .pre-commit-config.yaml  README.md  inference.py  pyproject.toml  train.py
.dvc/: config
config/: config.yaml
data/: test.csv.dvc  train.csv.dvc
mlops_project/: infer.py  inference.py  train.py  utils.py
models/: .gitignore  categorical_imputer.pickle.dvc  cb_clf.dvc  numerical_imputer.pickle.dvc
