[tool.poetry]
name = "mlops_project"
version = "0.1.0"
description = "\"Test mlops project\""
authors = ["Kirill <malyushitsky@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
catboost = "^1.2.2"
dvc = "^3.36.1"
hydra-core = "^1.3.2"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
